z-index fix for buttons on mobile?

--- a/input.css
+++ b/input.css
@@ -85,7 +85,7 @@ h1{
 }
 
 .button-container{
-  z-index:-1
+  z-index: -1
 }
 
 .socials-button{
@@ -94,6 +94,7 @@ h1{
   font-size: 1.05rem;
   background: rgba(255, 255, 255, 0.329);
   width: 90%;
+  z-index: 99;
   height: 40px;
 }
 
@@ -147,6 +148,7 @@ h1{
   width: 70%;
   height: 40px;
   margin-bottom: 20px;
+  z-index: 99;
 }
 
 .link-buttons button:hover{
